* Nov 1 2000 hship

More changes to the Tutorial, to take advantage of Tapestry's switch-over to Servlet 2.2.

* Nov 1 2000 hship

Convert the Tutorial over to using Jetty.

* Nov 1 2000 hship

Remove dependecy on IBM's JLog toolkit (to be replaced with Log4J, which is open source).
Remove references to PrimixFoundation.jar, which has been merged into Tapestry.jar.

* Oct 6 2000 hship

Create better components for linking to Person and ViewBook pages.

* Oct 4 2000 hship

Make some changes for recent changes to the Tapestry API.

* Sep 15 2000 hship

More work on the JSP Vlib, adding new pages and exception handling, and making
the servlets responsible for writting links.

* Sep 14 2000 hship

Begin work on the JSP version of the Primix Virtual Library.

* Sep 12 2000 hship

Add the ShowInspector component to the tutorial Border and the Vlib Border.
Fix some bugs that have cropped up in the blue border demo.

* Sep 8 2000 hship

Modify the blue-border demo to work properly in a standalone mode.

* Sep 8 2000 hship

Started ChangeLog for Examples, some time after release 0.2.0.
Vlib:
  Add a ShowInspector component to the Border.
Tutorial:
  Add a ShowInspector component to the Border.
  Change the Survey tutorial to properly set up the inputSex component
  (the API for PropertySelection has changed).
