@@ -1,0 +1,45 @@
+<!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.2//EN" "http://java.sun.com/j2ee/dtds/web-app_2_2.dtd">
+<!--$Id$-->
+<!-- This file contains the default settings for web applications -->
+<web-app>
+	<servlet>
+		<servlet-name>JSP</servlet-name>
+		<servlet-class>org.apache.jasper.servlet.JspServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>JSP</servlet-name>
+		<url-pattern>*.jsp</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>JSP</servlet-name>
+		<url-pattern>*.JSP</url-pattern>
+	</servlet-mapping>
+	<session-config>
+		<session-timeout>60</session-timeout>
+	</session-config>
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>Read Only</web-resource-name>
+			<url-pattern>/</url-pattern>
+			<http-method>DELETE</http-method>
+			<http-method>PUT</http-method>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>content-administrator</role-name>
+		</auth-constraint>
+	</security-constraint>
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>WEB-INF</web-resource-name>
+			<url-pattern>/WEB-INF/*</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>content-administrator</role-name>
+		</auth-constraint>
+	</security-constraint>
+	<!--
+  <security-role>
+      <role-name>roleName</role-name>
+  </security-role>
+  -->
+</web-app>
